# CHESS

./: pyproject.toml  requirements.txt  schema.txt
src/: __init__.py
src/database_utils/: db_info.py  execution.py  schema_generator.py  sql_parser.py
tests/: __init__.py  test_db_info.py  test_execution.py  test_schema_generator.py  test_sql_parser.py
