[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["vikyw89 <vikyw89@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
anthropic = "*"
chromadb = "*"
fastapi = "*"
func-timeout = "*"
google-ai-generativelanguage = "*"
google-api-core = "*"
google-auth = "*"
google-generativeai = "*"
googleapis-common-protos = "*"
langchain = "*"
langchain-anthropic = "*"
langchain-chroma = "*"
langchain-community = "*"
langchain-core = "*"
langchain-google-genai = "*"
langchain-openai = "*"
langgraph = "*"
langsmith = "*"
numpy = "*"
openai = "*"
overrides = "*"
packaging = "*"
pandas = "*"
pillow = "*"
pydantic = "*"
pydantic-core = "*"
python-dotenv = "*"
python-multipart = "*"
regex = "*"
requests = "*"
safetensors = "*"
scikit-learn = "*"
scipy = "*"
sentence-transformers = "*"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
sqlglot = "*"
tiktoken = "*"
tokenizers = "*"
tqdm = "*"
transformers = "*"
typing-extensions = "*"
datasketch = "*"
nest-asyncio = "^1.6.0"
pytest = "^8.2.2"
pymysql = "^1.1.1"
aiomysql = "^0.2.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
